--- a/deltaTask1/hacker/main.css
+++ b/deltaTask1/hacker/main.css
@@ -77,6 +77,17 @@
   padding-bottom: 5px;
   border-bottom: 2px solid black;
 }
+.nav h2 {
+  margin: 0 auto;
+  font-family: "Lato";
+  font-weight: 100;
+  font-size: 1em;
+  padding-bottom: 5px;
+  margin-top: 20px;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  width: 50%;
+}
 .nav .ul {
   margin: 0;
   padding: 0;
@@ -98,6 +109,13 @@
   width: 100%;
 }
 
+#diff {
+  width: 50%;
+  margin: 5%;
+  background: #264b70;
+  color: white;
+  font-size: 1.5rem;
+}
 .sec-1 #right {
   margin-left: 75%;
 }
@@ -162,12 +180,11 @@
 .box .item {
   width: 18%;
   margin: 1% 1%;
-  background-color: #17a2b8;
   opacity: 1;
   text-align: center;
   padding: auto;
   height: 95%;
-  color: white;
+  color: rgba(0, 0, 0, 1);
   font-size: 5vh;
   box-shadow: 4px 4px 0 0 rgba(0, 0, 0, 0.2);
 }
@@ -196,9 +213,11 @@
   width: 90%;
   text-align: center;
   box-shadow: 10px 10px 0 0 rgba(0, 0, 0, 0.2);
+  overflow-y: auto;
 }
-.wrap {
+#right .wrap {
   position: relative;
+  height: 90vh;
 }
 .col-3 .score-box h1 {
   font-family: "Lato";
@@ -212,6 +231,12 @@
   list-style-type: none;
 }
 
+.score-box .schead {
+  text-align: left;
+  list-style-type: none;
+  margin-left: 20px;
+}
+
 .reset {
   border: none;
   border-radius: 0;
@@ -221,6 +246,13 @@
   margin: 10px;
   color: white;
   padding: 10px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 0;
+}
+.remove {
+  display: none;
 }
 .play-again {
   background: #28a745;
@@ -231,10 +263,6 @@
   margin: auto;
   margin-bottom: 20px;
   padding: 10px;
-}
-
-.remove {
-  display: none;
 }
 
 @media only screen and (max-width: 1100px) and (min-width: 600px) {
