--- a/deltaTask1/hackerPlus/main.css
+++ b/deltaTask1/hackerPlus/main.css
@@ -115,7 +115,21 @@
   background: #264b70;
   color: white;
   font-size: 1.5rem;
+  margin-bottom: 0;
 }
+.nav label {
+  width: 80%;
+  font-size: 1.2rem;
+  display: block;
+  margin: auto;
+  margin-top: 10px;
+}
+.colorsel {
+  margin: 0;
+  padding: 0px;
+  width: 40%;
+}
+
 .sec-1 #right {
   margin-left: 75%;
 }
