--- a/deltaTask1/hacker/main.css
+++ b/deltaTask1/hacker/main.css
@@ -171,7 +171,7 @@
   display: flex;
   flex-direction: column;
   border: 2px solid black;
-  overflow-y: auto;
+  overflow-y: hidden;
 }
 .box-row {
   height: 23%;
