--- a/deltaTask1/hackerPlus/main.css
+++ b/deltaTask1/hackerPlus/main.css
@@ -185,7 +185,7 @@
   display: flex;
   flex-direction: column;
   border: 2px solid black;
-  overflow-y: auto;
+  overflow-y: hidden;
   overflow-x: hidden;
 }
 .box-row {
