--- a/DeltaWDTask-2/main.css
+++ b/DeltaWDTask-2/main.css
@@ -70,6 +70,10 @@ small {
   min-height: 50px;
 }
 
+#powerups {
+  display: none;
+}
+
 .menu .menu-list .list-item:hover {
   box-shadow: 4px 4px 0 0 rgba(0, 0, 0, 0.2), 4px 4px 0 0 rgba(0, 0, 0, 0.19);
 }
