--- a/SpiderWDTask-1/main.css
+++ b/SpiderWDTask-1/main.css
@@ -8,7 +8,7 @@
   min-height: 100vh;
   position: relative;
   background: white;
-  overflow-y: auto;
+  overflow: hidden;
 }
 .canvas-wrap {
   position: absolute;
@@ -18,7 +18,6 @@
 }
 #game-screen {
   background: #343a40;
-  height: 100vh;
 }
 
 .menu {
@@ -28,7 +27,6 @@
   transform: translate(-50%, -50%);
   background: #17a2b8;
   box-shadow: 6px 6px 0 0 rgba(0, 0, 0, 0.2), 8px 8px 0 0 rgba(0, 0, 0, 0.19);
-  height: 100vh;
 }
 
 .menu h1 {
