--- a/main.css
+++ b/main.css
@@ -167,7 +167,8 @@ body {
 }
 
 .row.mainpage .col-3.left .row-6 img {
-  height: 50%;
+  width: 50%;
+  height: auto;
   margin-top: 5%;
   border-radius: 100%;
 }
@@ -201,7 +202,6 @@ body {
   margin-left: 15px;
   list-style-type: none;
   font-size: 1.2em;
-  text-transform: uppercase;
   font-family: "Alegreya-Sans-SC";
 }
 
